--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,6 +1,3 @@
-#env
-env: 
-    TERM: xterm-256color
 #Window Customization
 window:
   dimensions:
@@ -11,15 +8,14 @@ window:
       x: 0
       y: 0
   padding:
-      x: 10
-      y: 10
+      x: 25
+      y: 25
 
-  dynamic_padding: true
   decorations: none
   scrolling:
       history: 10000
       multiplier: 3
-  background_opacity: 0.95
+  background_opacity: .8
   window.dynami_title: true
 
   #Font Customization  
@@ -95,4 +91,12 @@ cursor:
       Aqua: '#8abeb7'
       Blue: '#81a2be' 
       Purple: '#b294bb'
+
+  #  ____                   _       _                _   
+  # |  _ \ _ __ __ _ _ __  (_) __ _| |_ __ ___   ___| |_     
+  # | |_) | '__/ _` | '_ \ | |/ _` | | '_ ` _ \ / _ \ __|    Pranjal (Pmet)  
+  # |  __/| | | (_| | | | || | (_| | | | | | | |  __/ |_     https://github.com/Pranjalmet/                        
+  # |_|   |_|  \__,_|_| |_|/ |\__,_|_|_| |_| |_|\___|\__|
+  #                      |__/                            
+
 
