--- a/polybar/config
+++ b/polybar/config
@@ -421,3 +421,13 @@ margin-top = 5
 margin-bottom = 5
 
 ; vim:ft=dosini
+;
+; 
+;  ____                   _       _                _   
+; |  _ \ _ __ __ _ _ __  (_) __ _| |_ __ ___   ___| |_     
+; | |_) | '__/ _` | '_ \ | |/ _` | | '_ ` _ \ / _ \ __|    Pranjal (Pmet)  
+; |  __/| | | (_| | | | || | (_| | | | | | | |  __/ |_     https://github.com/Pranjalmet/                        
+; |_|   |_|  \__,_|_| |_|/ |\__,_|_|_| |_| |_|\___|\__|
+;                      |__/                            
+
+
