updated config files

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -30,7 +30,7 @@ shadow-offset-y = -7;
 #
 # no-dock-shadow = false
 
-  Don't draw shadows on drag-and-drop windows. This option is deprecated, 
+# Don't draw shadows on drag-and-drop windows. This option is deprecated, 
 # you should use the *wintypes* option in your config file instead.
 #
 # no-dnd-shadow = false
