--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -421,3 +421,12 @@ wintypes:
   popup_menu = { opacity = 0.8; }
   dropdown_menu = { opacity = 0.8; }
 };
+
+#  ____                   _       _                _   
+# |  _ \ _ __ __ _ _ __  (_) __ _| |_ __ ___   ___| |_     
+# | |_) | '__/ _` | '_ \ | |/ _` | | '_ ` _ \ / _ \ __|    Pranjal (Pmet)  
+# |  __/| | | (_| | | | || | (_| | | | | | | |  __/ |_     https://github.com/Pranjalmet/                        
+# |_|   |_|  \__,_|_| |_|/ |\__,_|_|_| |_| |_|\___|\__|
+#                      |__/                            
+
+
