--- a/polybar/config
+++ b/polybar/config
@@ -56,10 +56,15 @@ font-1 = FontAwesome:size=11;0
 
 modules-left = powermenu bspwm i3
 modules-center = spotify
-modules-right = pulseaudio xbacklight date battery 
+modules-right = volume xbacklight wireless-network battery date
 
-tray-position = left 
-tray-padding = 2
+tray-position = hidden 
+tray-padding = 11
+tray-transparent = true
+tray-offset-y = 22
+tray-offset-x = -0
+tray-maxmize = 18
+tray-detached = true
 ;tray-background = ${colors.background-alt}
 
 ;wm-restack = bspwm
@@ -266,6 +271,51 @@ format-prefix-foreground = ${colors.foreground-alt}
 
 label = %date%  %time%
 
+[module/volume]
+type = internal/pulseaudio
+;type = internal/alsa
+sink = alsa_output.pci-0000_00_1f.3.analog-stereo
+
+; Soundcard to be used
+; Usually in the format hw:#
+master-soundcard = hw:1
+speaker-soundcard = hw:1
+headphone-soundcard = hw:1
+
+; Name of the master mixer
+; Default: Master
+master-mixer = Master
+
+; Optionally define speaker and headphone mixers
+; Use the following command to list available mixer controls:
+; $ amixer scontrols | sed -nr "s/.*'([[:alnum:]]+)'.*/\1/p"
+; Default: none
+speaker-mixer = Speaker
+; Default: none
+headphone-mixer = Headphone
+
+; NOTE: This is required if headphone_mixer is defined
+; Use the following command to list available device controls
+; $ amixer controls | sed -r "/CARD/\!d; s/.*=([0-9]+).*name='([^']+)'.*/printf '%3.0f: %s\n' '\1' '\2'/e" | sort
+; Default: none
+headphone-id = 9
+
+; Use volume mapping (similar to amixer -M and alsamixer), where the increase in volume is linear to the ear
+; Default: false
+mapped = true
+
+format-muted-background = ${colors.background-unf}
+format-volume-background = ${colors.background-alt}
+format-volume = "   <ramp-volume>  <label-volume>  "
+format-volume-prefix = " "
+label-muted = "   mute   "
+
+;label-muted = "          "
+
+; Only applies if <ramp-volume> is used
+ramp-volume-0 = 
+ramp-volume-1 = 
+
 [module/pulseaudio]
 type = internal/pulseaudio
 
@@ -400,6 +450,31 @@ menu-2-0 = Shut The Fuck Down!
 menu-2-0-exec = sudo poweroff
 menu-2-1 = Cancel
 menu-2-1-exec = menu-open-0
+
+[module/wireless-network]
+type = internal/network
+interface = wlp2s0
+interval = 3.0
+
+format-connected-prefix = " "
+
+format-connected-background = ${colors.background-alt}
+format-connected = "   <ramp-signal> <label-connected>  "
+format-connected-underline = #9f78e1
+label-connected =
+
+format-disconnected = " no wifi :( "
+format-disconnected-background = ${colors.background-unf}
+;format-disconnected-underline = ${self.format-connected-underline}
+;label-disconnected = %ifname% disconnected
+label-disconnected-foreground = ${colors.foreground-alt}
+
+ramp-signal-0 = "    0%"
+ramp-signal-1 = "    25%"
+ramp-signal-2 = "    50%"
+ramp-signal-3 = "    75%"
+ramp-signal-4 = "    100%"
+ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/spotify]
 type = custom/script
